W-12970851: Generate a module-info.java for artifact-ast module (#12475)